--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-body{
+body {
     background-color: #747474;
 }
 
-.parent{
+.parent {
     display: flex;
     border: 2px solid #272727;
     border-radius: 30px;
 }
 
-.options{
+.options {
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 1;
     background-color: #14A76c;
-    border-top-left-radius:28px;
+    border-top-left-radius: 28px;
     border-bottom-left-radius: 28px;
 }
 
-.option-buttons{
+.option-buttons {
     width: 60%;
     max-height: 50px;
     margin-top: 10%;
@@ -26,26 +26,36 @@ body{
     border-radius: 18px;
     background: rgba(255, 255, 255, 0.3);
 }
-.option-buttons:hover{
-    background-color:white;
+
+.option-buttons:hover {
+    background-color: white;
     color: #14A76C;
 }
 
-.chat{
+.chat {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    height:97vh;
+    height: 97vh;
     width: 80vw;
     flex: 4;
     background-color: #272727;
-    border-top-right-radius:28px;
+    border-top-right-radius: 28px;
     border-bottom-right-radius: 28px;
 }
-.input-container{
+
+.output {
+    width: 80%;
+    height: 200px;
+    /* box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5); */
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.input-container {
     display: flex;
-    width: 100%;
+    width: 80%;
     max-width: 600px;
     justify-content: space-between;
     border: 2px solid #14A76C;
@@ -53,7 +63,8 @@ body{
     align-items: center;
     margin: 20px;
 }
-textarea{
+
+textarea {
     flex: 5;
     width: 80%;
     background-color: transparent;
@@ -66,7 +77,7 @@ textarea{
 }
 
 button {
-    flex : 1;
+    flex: 1;
     height: 100%;
     background-color: #14A76c;
     color: #fff;
@@ -75,7 +86,7 @@ button {
     cursor: pointer;
 }
 
-.add-button{
+.add-button {
     flex: none;
     height: 50%;
     background-color: transparent;
@@ -85,6 +96,7 @@ button {
     margin-top: 12px;
     cursor: pointer;
 }
+
 form {
     display: flex;
     flex-wrap: wrap;
@@ -92,25 +104,29 @@ form {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    width:80%;
+    width: 80%;
     max-width: 800px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 18px;
     background: rgba(255, 255, 255, 0.1);
 }
-.inputbox{
+
+.inputbox {
     display: flex;
     justify-content: center;
     flex-direction: column;
     width: 50%;
 }
+
 label {
     display: inline-block;
     margin-bottom: 8px;
     font-weight: bold;
     color: white;
 }
-input, select {
+
+input,
+select {
     display: inline-block;
     padding: 10px;
     margin-bottom: 15px;
@@ -119,11 +135,12 @@ input, select {
     border-radius: 4px;
     box-sizing: border-box;
     background-color: #272727;
-    
+
 }
+
 #submitbutton button {
     max-width: 100px;
-    max-height:50px;
+    max-height: 50px;
     padding: 10px;
     background-color: #14A76C;
     color: #fff;
@@ -135,7 +152,8 @@ input, select {
 button:hover {
     background-color: #45a049;
 }
-#submitbutton{
+
+#submitbutton {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
